--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,19 @@ body {
 
 .container {
   width: 80%;
-  margin: auto
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .listRow {
   display: flex; 
   align-items: center;
+}
+
+.loadingText h3 {
+  margin-top: 20px;
+  text-align: center;
+  width: 100%;
 }
 
 .bookDetails {
